--- a/style.css
+++ b/style.css
@@ -1,3 +1,189 @@
-h1{
-    color: red;
+nav img{
+    width: 80px;
 }
+.navbar-brand{
+    color: #6BF8FF;
+}
+.navbar{
+    background-color: #081843;
+}
+.searchBox{
+    background-color: #081843;
+    border-color: #6bf8ff;
+}
+
+body{
+    background-color: #0a1d4f;
+}
+.list-games{
+    margin-top: 8%;
+}
+
+/* game1 */
+.game1{
+    /* height: 100vh; */
+    background-color: black;
+    padding: 25%;
+}
+.game h1{
+    color: #6BF8FF;
+}
+.side-1{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  margin-top: 19%;
+}
+.side-1 img{
+  width: 80%;
+  height: 80%;
+  object-fit: fill;
+}
+.side-1 h4{
+  color: #6BF8FF;
+}
+.other-games{
+  display: grid;
+  grid-template-columns: repeat(6,1fr);
+}
+.other-games img{
+  width: 80%;
+  height: 80%;
+  object-fit: fill
+}
+.other-games h4{
+  color: #6BF8FF;
+}
+
+/* game2 */
+.game2{
+    /* height: 100vh; */
+    background-color: black;
+    padding: 25%;
+}
+.game h1{
+    color: #6BF8FF;
+}
+#scrambled-word{
+    color: #fff;
+    font-size: 4vh;
+    margin: 5%;
+}
+/* game3 */
+.game3{
+    /* height: 100vh; */
+    background-color: black;
+    padding: 25%;
+}
+.game h1{
+    color: #6BF8FF;
+}
+#options-container {
+    text-align: center;
+  }
+  #options-container div {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin: 1.2em 0 2.4em 0;
+  }
+  #options-container button {
+    padding: 0.6em 1.2em;
+    border: 3px solid #000000;
+    background-color: #ffffff;
+    color: #000000;
+    border-radius: 0.3em;
+    text-transform: capitalize;
+  }
+  #options-container button:disabled {
+    border: 3px solid #808080;
+    color: #808080;
+    background-color: #efefef;
+  }
+  #options-container button.active {
+    background-color: #f4c531;
+    border: 3px solid #000000;
+    color: #000000;
+  }
+  .letter-container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 0.6em;
+  }
+  #letter-container button {
+    height: 2.4em;
+    width: 2.4em;
+    border-radius: 0.3em;
+    background-color: #ffffff;
+  }
+  .new-game-popup {
+    background-color: #ffffff;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 0.6em;
+  }
+  
+  #user-input-section {
+    display: flex;
+    justify-content: center;
+    font-size: 1.8em;
+    margin: 0.6em 0 1.2em 0;
+  }
+  canvas {
+    display: block;
+    margin: auto;
+    border: 1px solid #000000;
+  }
+  .hide {
+    display: none;
+  }
+  #result-text h2 {
+    font-size: 1.8em;
+    text-align: center;
+  }
+  #result-text p {
+    font-size: 1.25em;
+    margin: 1em 0 2em 0;
+  }
+  #result-text span {
+    font-weight: 600;
+  }
+  #new-game-button {
+    font-size: 1.25em;
+    padding: 0.5em 1em;
+    background-color: #f4c531;
+    border: 3px solid #000000;
+    color: #000000;
+    border-radius: 0.2em;
+  }
+  .win-msg {
+    color: #39d78d;
+  }
+  .lose-msg {
+    color: #fe5152;
+  }
+  /* home */
+  .list-games h1{
+    text-align: left;
+    color: #39d78d;
+  }
+  .games{
+    display: grid;
+    grid-template-columns: repeat(8,1fr);
+  }
+  .games img{
+    width: 80%;
+    height: 80%;
+    object-fit: fill;
+  }
+  .games h4{
+    color: #6BF8FF;
+  }
