--- a/style.css
+++ b/style.css
@@ -112,6 +112,9 @@ body{
 #options-container {
     text-align: center;
   }
+#options-container h3{
+  color: #fff;
+}
   #options-container div {
     width: 100%;
     display: flex;
@@ -168,11 +171,12 @@ body{
     justify-content: center;
     font-size: 1.8em;
     margin: 0.6em 0 1.2em 0;
+    color: #fff;
   }
   canvas {
     display: block;
     margin: auto;
-    border: 1px solid #000000;
+    border: 1px solid #6BF8FF;
   }
   .hide {
     display: none;
@@ -201,6 +205,24 @@ body{
   }
   .lose-msg {
     color: #fe5152;
+  }
+  /* game 4 */
+  .game4{
+    /* height: 100vh; */
+    background-color: black;
+    padding: 20%;
+  }
+  .game h1{
+      color: #6BF8FF;
+  }
+  #current-word{
+    color: #DE9C43;
+  }
+  #message{
+    color: red;
+  }
+  .t-5 span{
+    color: #39d78d;
   }
   /* home */
   .list-games h1{
